--- a/HTML_FC/HTML_FC.csproj
+++ b/HTML_FC/HTML_FC.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\LIBCORE\LIBCORE.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
